finish check info product in manager

--- a/src/main/resources/View/manager.fxml
+++ b/src/main/resources/View/manager.fxml
@@ -403,22 +403,22 @@
                   <Font name="Inter Regular" size="25.0" />
                </font>
             </TextArea>
-            <Button fx:id="addImageButton1" layoutX="1016.0" layoutY="576.0" mnemonicParsing="false" onAction="#setAddImageButton" prefHeight="83.0" prefWidth="145.0" style="-fx-background-radius: 20; -fx-border-radius: 20;" styleClass="main_btn" text="Add">
+            <Button fx:id="addImageButton2" layoutX="1016.0" layoutY="576.0" mnemonicParsing="false" onAction="#setAddImageButton2" prefHeight="83.0" prefWidth="145.0" style="-fx-background-radius: 20; -fx-border-radius: 20;" styleClass="main_btn" text="Add">
                <font>
                   <Font name="Inter Black" size="23.0" />
                </font>
             </Button>
-            <Button fx:id="deleteProductButton" layoutX="1184.0" layoutY="574.0" mnemonicParsing="false" onAction="#deleteProduct" prefHeight="83.0" prefWidth="145.0" style="-fx-background-radius: 20; -fx-border-radius: 20;" styleClass="main_btn" text="Delete">
+            <Button fx:id="deleteProductButton2" layoutX="1184.0" layoutY="574.0" mnemonicParsing="false" onAction="#deleteProduct" prefHeight="83.0" prefWidth="145.0" style="-fx-background-radius: 20; -fx-border-radius: 20;" styleClass="main_btn" text="Delete">
                <font>
                   <Font name="Inter Black" size="23.0" />
                </font>
             </Button>
-            <Button fx:id="updateProductButton" layoutX="1017.0" layoutY="677.0" mnemonicParsing="false" onAction="#updateProduct" prefHeight="81.0" prefWidth="314.0" style="-fx-background-radius: 20; -fx-border-radius: 20;" styleClass="main_btn" text="Update Information">
+            <Button fx:id="updateProductButton2" layoutX="1017.0" layoutY="677.0" mnemonicParsing="false" onAction="#updateProduct" prefHeight="81.0" prefWidth="314.0" style="-fx-background-radius: 20; -fx-border-radius: 20;" styleClass="main_btn" text="Update Information">
                <font>
                   <Font name="Inter Black" size="23.0" />
                </font>
             </Button>
-            <ImageView fx:id="productImageView1" fitHeight="498.0" fitWidth="394.0" layoutX="972.0" layoutY="68.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="productImageView2" fitHeight="498.0" fitWidth="394.0" layoutX="972.0" layoutY="68.0" pickOnBounds="true" preserveRatio="true" />
             <Label layoutX="487.0" layoutY="34.0" text="Product Type">
                <font>
                   <Font name="Inter Bold" size="30.0" />
