--- a/src/main/resources/View/Staff.fxml
+++ b/src/main/resources/View/Staff.fxml
@@ -317,7 +317,7 @@
                </font>
             </Label>
             <Line endX="850.2823486328125" endY="-1.52587890625E-5" layoutX="350.0" layoutY="37.0" startX="-35.999969482421875" startY="-7.62939453125E-6" strokeWidth="3.0" styleClass="line-color" />
-            <ScrollPane layoutX="45.0" layoutY="72.0" prefHeight="765.0" prefWidth="1398.0">
+            <ScrollPane layoutX="43.0" layoutY="125.0" prefHeight="765.0" prefWidth="1398.0">
                <content>
                   <GridPane fx:id="GridPane" prefHeight="765.0" prefWidth="1389.0" styleClass="main-background">
                     <columnConstraints>
@@ -348,6 +348,7 @@
                   <Font name="Inter Black" size="20.0" />
                </font>
             </Button>
+            <TextField fx:id="textFieldSearch" promptText="Search" layoutX="44.0" layoutY="58.0" onKeyTyped="#enterText" prefHeight="47.0" prefWidth="1086.0" />
          </children>
       </AnchorPane>
    </children>
