--- a/src/main/resources/View/manager.fxml
+++ b/src/main/resources/View/manager.fxml
@@ -37,27 +37,22 @@
                     </image>
                 </ImageView>
                 <Avatar fx:id="ava" accessibleRole="IMAGE_VIEW" layoutX="1413.0" layoutY="12.0" />
-                <Button fx:id="productBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="692.0" layoutY="12.0" mnemonicParsing="false" onAction="#anchorProductappear" prefHeight="54.0" prefWidth="152.0" styleClass="switch-btn" text="Product">
+                <Button fx:id="productBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="692.0" layoutY="8.0" mnemonicParsing="false" onAction="#anchorProductappear" prefHeight="54.0" prefWidth="152.0" styleClass="switch-btn" text="Product">
                     <font>
                         <Font name="Inter ExtraBold" size="28.0" />
                     </font>
                 </Button>
-                <Button fx:id="staffBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="889.0" layoutY="12.0" mnemonicParsing="false" onAction="#anchorStaffappear" prefHeight="54.0" prefWidth="110.0" styleClass="switch-btn" text="Staff">
+                <Button fx:id="staffBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="889.0" layoutY="8.0" mnemonicParsing="false" onAction="#anchorStaffappear" prefHeight="54.0" prefWidth="110.0" styleClass="switch-btn" text="Staff">
                     <font>
                         <Font name="Inter ExtraBold" size="28.0" />
                     </font>
                 </Button>
-                <Button fx:id="billBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1046.0" layoutY="10.0" mnemonicParsing="false" onAction="#anchorBillappear" prefHeight="50.0" prefWidth="80.0" styleClass="switch-btn" text="Bill">
+                <Button fx:id="billBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1046.0" layoutY="8.0" mnemonicParsing="false" onAction="#anchorBillappear" prefHeight="50.0" prefWidth="80.0" styleClass="switch-btn" text="Bill">
                     <font>
                         <Font name="Inter ExtraBold" size="28.0" />
                     </font>
                 </Button>
-                <Pane fx:id="switch_pane" layoutX="529.0" layoutY="59.0" prefHeight="6.0" prefWidth="119.0" style="-fx-background-radius: 10;" styleClass="switch-pane" />
-                <Button fx:id="homeBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="529.0" layoutY="8.0" mnemonicParsing="false" onAction="#anchorHomeappear" prefHeight="54.0" prefWidth="119.0" styleClass="switch-btn" text="Home">
-                    <font>
-                        <Font name="Inter ExtraBold" size="28.0" />
-                    </font>
-                </Button>
+                <Pane fx:id="switch_pane" layoutX="529.0" layoutY="52.0" prefHeight="6.0" prefWidth="119.0" style="-fx-background-radius: 10;" styleClass="switch-pane" />
             <MenuButton fx:id="menubutton" layoutX="1175.0" layoutY="12.0" mnemonicParsing="false" style="-fx-background-color: none;" text="Lê Minh Duyệt">
               <items>
                 <MenuItem mnemonicParsing="false" onAction="#logout" text="Log out" />
@@ -66,6 +61,11 @@
                   <Font name="Inter Bold" size="22.0" />
                </font>
             </MenuButton>
+                <Button fx:id="homeBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="529.0" layoutY="8.0" mnemonicParsing="false" onAction="#anchorHomeappear" prefHeight="54.0" prefWidth="119.0" styleClass="switch-btn" text="Home">
+                    <font>
+                        <Font name="Inter ExtraBold" size="28.0" />
+                    </font>
+                </Button>
             </children>
         </AnchorPane>
         <AnchorPane fx:id="anchorHome" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0">
@@ -80,7 +80,7 @@
                     </yAxis>
                 </BarChart>
             <DatePicker fx:id="dateend" layoutX="768.0" layoutY="45.0" prefHeight="43.0" prefWidth="550.0" />
-            <Button layoutX="1374.0" layoutY="46.0" mnemonicParsing="false" onAction="#setBarchart" prefHeight="41.0" prefWidth="103.0" text="SEE">
+            <Button layoutX="1355.0" layoutY="40.0" mnemonicParsing="false" onAction="#setBarchart" prefHeight="41.0" prefWidth="103.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="main_btn" text="SEE">
                <font>
                   <Font name="Inter Bold" size="24.0" />
                </font>
@@ -423,12 +423,13 @@
                </font>
             </Button>
             <ImageView fx:id="productImageView1" fitHeight="498.0" fitWidth="394.0" layoutX="972.0" layoutY="68.0" pickOnBounds="true" preserveRatio="true" />
-            <Label layoutX="487.0" layoutY="34.0" text="Product Type">
+            <Label layoutX="487.0" layoutY="27.0" text="Product Type">
                <font>
                   <Font name="Inter Bold" size="30.0" />
                </font>
             </Label>
-            <ComboBox fx:id="productTypeComboBox2" layoutX="487.0" layoutY="89.0" prefHeight="46.0" prefWidth="400.0" />
+            <ComboBox fx:id="productTypeComboBox2" layoutX="483.0" layoutY="68.0" prefHeight="70.0" prefWidth="400.0" />
+            <Pane layoutX="972.0" layoutY="68.0" prefHeight="498.0" prefWidth="394.0" styleClass="pane1" />
          </children>
       </AnchorPane>
     </children>
