--- a/src/main/resources/manager.css
+++ b/src/main/resources/manager.css
@@ -103,6 +103,45 @@
     -fx-border-color: #141E46;
 }
 
+.menu-button{
+    -fx-background-color: transparent;
+}
+
+.context-menu{
+    -fx-background-color: #f8efc3;
+    -fx-background-radius: 10px;
+    -fx-border-radius: 10px;
+    -fx-padding: 5px;
+    -fx-border-width: 1px;
+    -fx-border-color: #141E46;
+}
+
+.menu-item{
+    -fx-font-weight: bold;
+    -fx-font-size: 21px;
+    -fx-border-width: 0px;
+    -fx-pref-width: 218;
+}
+
+.combo-box{
+    -fx-border-color: #141E46;
+    -fx-border-width: 1px;
+    -fx-background-color: white;
+    -fx-background-radius: 15px;
+    -fx-border-radius: 15px;
+    -fx-font-size: 25px;
+}
+
+.pane1{
+    -fx-background-color: white;
+    -fx-border-width: 1px;
+    -fx-border-color: #141E46;
+}
+
+.date-picker{
+    -fx-font-size: 25px;
+}
+
 
 
 
