--- a/src/main/resources/View/manager.fxml
+++ b/src/main/resources/View/manager.fxml
@@ -276,21 +276,21 @@
                <font>
                   <Font name="Inter Regular" size="25.0" />
                </font></TextField>
-            <Label layoutX="64.0" layoutY="171.0" text="Price">
+            <Label layoutX="64.0" layoutY="158.0" text="Price">
                <font>
                   <Font name="Inter Bold" size="30.0" />
                </font>
             </Label>
-            <TextField fx:id="productPriceTxtField" layoutX="58.0" layoutY="210.0" prefHeight="69.0" prefWidth="400.0" promptText="Price" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="txtfd">
+            <TextField fx:id="productPriceTxtField" layoutX="58.0" layoutY="197.0" prefHeight="69.0" prefWidth="400.0" promptText="Price" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="txtfd">
                <font>
                   <Font name="Inter Regular" size="25.0" />
                </font></TextField>
-            <Label layoutX="495.0" layoutY="156.0" text="Color">
+            <Label layoutX="495.0" layoutY="158.0" text="Color">
                <font>
                   <Font name="Inter Bold" size="30.0" />
                </font>
             </Label>
-            <TextField fx:id="productColorTxtField" layoutX="489.0" layoutY="209.0" prefHeight="69.0" prefWidth="400.0" promptText="Color" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="txtfd">
+            <TextField fx:id="productColorTxtField" layoutX="489.0" layoutY="196.0" prefHeight="69.0" prefWidth="400.0" promptText="Color" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="txtfd">
                <font>
                   <Font name="Inter Regular" size="25.0" />
                </font></TextField>
@@ -343,6 +343,7 @@
                </font>
             </Label>
             <ComboBox fx:id="productTypeComboBox" layoutX="487.0" layoutY="68.0" prefHeight="70.0" prefWidth="394.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="spinner" />
+            <Pane layoutX="972.0" layoutY="68.0" prefHeight="498.0" prefWidth="394.0" styleClass="pane1" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="productInfoAnchorpane2" layoutX="41.0" layoutY="150.0" prefHeight="797.0" prefWidth="1455.0" style="-fx-background-radius: 20; -fx-border-radius: 20;" styleClass="main-background" visible="false">
@@ -357,12 +358,12 @@
                   <Font name="Inter Regular" size="25.0" />
                </font>
             </TextField>
-            <Label layoutX="64.0" layoutY="171.0" text="Price">
+            <Label layoutX="64.0" layoutY="156.0" text="Price">
                <font>
                   <Font name="Inter Bold" size="30.0" />
                </font>
             </Label>
-            <TextField fx:id="productPriceTxtField2" layoutX="58.0" layoutY="210.0" prefHeight="69.0" prefWidth="400.0" promptText="Price" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="txtfd">
+            <TextField fx:id="productPriceTxtField2" layoutX="58.0" layoutY="195.0" prefHeight="69.0" prefWidth="400.0" promptText="Price" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="txtfd">
                <font>
                   <Font name="Inter Regular" size="25.0" />
                </font>
@@ -372,7 +373,7 @@
                   <Font name="Inter Bold" size="30.0" />
                </font>
             </Label>
-            <TextField fx:id="productColorTxtField2" layoutX="489.0" layoutY="209.0" prefHeight="69.0" prefWidth="400.0" promptText="Color" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="txtfd">
+            <TextField fx:id="productColorTxtField2" layoutX="489.0" layoutY="194.0" prefHeight="69.0" prefWidth="400.0" promptText="Color" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="txtfd">
                <font>
                   <Font name="Inter Regular" size="25.0" />
                </font>
